@@ -5,7 +5,7 @@ import java.util.List;
 public final class CompositeCucumberException extends CucumberException {
 
     public CompositeCucumberException(List<Throwable> causes) {
-        super(String.format("There were %d exceptions. The details are in the stacktrace below.", causes.size()));
+        super("There were %d exceptions. The details are in the stacktrace below.".formatted(causes.size()));
         causes.forEach(this::addSuppressed);
     }
 
