@@ -1,9 +1,9 @@
 package io.cucumber.core.options;
 
 import io.cucumber.core.feature.FeatureWithLines;
+import org.jspecify.annotations.Nullable;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Optional;
 
@@ -32,11 +32,11 @@ import java.util.Optional;
  */
 class FeatureWithLinesOrRerunPath {
 
-    private final FeatureWithLines featureWithLines;
-    private final Collection<FeatureWithLines> featuresWithLinesToRerun;
+    private final @Nullable FeatureWithLines featureWithLines;
+    private final @Nullable Collection<FeatureWithLines> featuresWithLinesToRerun;
 
     FeatureWithLinesOrRerunPath(
-            FeatureWithLines featureWithLines, Collection<FeatureWithLines> featuresWithLinesToRerun
+            @Nullable FeatureWithLines featureWithLines, @Nullable Collection<FeatureWithLines> featuresWithLinesToRerun
     ) {
         this.featureWithLines = featureWithLines;
         this.featuresWithLinesToRerun = featuresWithLinesToRerun;
@@ -44,7 +44,7 @@ class FeatureWithLinesOrRerunPath {
 
     static FeatureWithLinesOrRerunPath parse(String arg) {
         if (arg.startsWith("@")) {
-            Path rerunFileOrDirectory = Paths.get(arg.substring(1));
+            Path rerunFileOrDirectory = Path.of(arg.substring(1));
             return new FeatureWithLinesOrRerunPath(null, RerunPath.parse(rerunFileOrDirectory));
         } else {
             return new FeatureWithLinesOrRerunPath(FeatureWithLines.parse(arg), null);
