@@ -15,8 +15,9 @@ import java.util.function.Function;
 
 import static io.cucumber.core.resource.ClasspathSupport.nestedJarEntriesExplanation;
 import static java.util.Collections.emptyMap;
+import static java.util.Objects.requireNonNull;
 
-class JarUriFileSystemService {
+final class JarUriFileSystemService {
 
     private static final String FILE_URI_SCHEME = "file";
     private static final String JAR_URI_SCHEME = "jar";
@@ -27,6 +28,10 @@ class JarUriFileSystemService {
     private static final Map<URI, FileSystem> openFiles = new HashMap<>();
     private static final Map<URI, AtomicInteger> referenceCount = new HashMap<>();
 
+    private JarUriFileSystemService() {
+        /* no-op */
+    }
+
     private static CloseablePath open(URI jarUri, Function<FileSystem, Path> pathProvider)
             throws IOException {
         FileSystem fileSystem = openFileSystem(jarUri);
@@ -35,7 +40,7 @@ class JarUriFileSystemService {
     }
 
     private synchronized static void closeFileSystem(URI jarUri) throws IOException {
-        int referents = referenceCount.get(jarUri).decrementAndGet();
+        int referents = requireNonNull(referenceCount.get(jarUri)).decrementAndGet();
         if (referents == 0) {
             openFiles.remove(jarUri).close();
             referenceCount.remove(jarUri);
@@ -45,7 +50,7 @@ class JarUriFileSystemService {
     private synchronized static FileSystem openFileSystem(URI jarUri) throws IOException {
         FileSystem existing = openFiles.get(jarUri);
         if (existing != null) {
-            referenceCount.get(jarUri).getAndIncrement();
+            requireNonNull(referenceCount.get(jarUri)).getAndIncrement();
             return existing;
         }
         FileSystem fileSystem = FileSystems.newFileSystem(jarUri, emptyMap());
@@ -88,7 +93,7 @@ class JarUriFileSystemService {
         String uriString = uri.toString();
         int lastJarUriSeparator = uriString.lastIndexOf(JAR_URI_SEPARATOR);
         if (lastJarUriSeparator < 0) {
-            throw new IllegalArgumentException(String.format("jar uri '%s' must contain '%s'", uri, JAR_URI_SEPARATOR));
+            throw new IllegalArgumentException("jar uri '%s' must contain '%s'".formatted(uri, JAR_URI_SEPARATOR));
         }
         String url = uriString.substring(0, lastJarUriSeparator);
         String entry = uriString.substring(lastJarUriSeparator + 1);
@@ -111,7 +116,7 @@ class JarUriFileSystemService {
         // Examples:
         // jar:file:/home/user/application.jar!/BOOT-INF/lib/dependency.jar!/com/example/dependency/resource.txt
         // jar:file:/home/user/application.jar!/BOOT-INF/classes!/com/example/package/resource.txt
-        String[] parts = uri.toString().split("!");
+        String[] parts = uri.toString().split("!", 0);
         String jarUri = parts[0];
         String jarEntry = parts[1];
         String subEntry = parts[2];
