@@ -13,13 +13,13 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-import static java.nio.file.Files.readAllBytes;
+import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -33,9 +33,10 @@ class FeatureParserTest {
     final URI uri = URI.create("classpath:com/example.feature");
 
     @Test
+    @Deprecated
     void can_parse_with_deprecated_method() throws IOException {
-        String source = new String(
-            readAllBytes(Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature")));
+        String source = Files
+                .readString(Path.of("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"));
         Optional<Feature> feature = parser.parse(uri, source, UUID::randomUUID);
         assertTrue(feature.isPresent());
         assertEquals(0, feature.get().getPickles().size());
@@ -44,7 +45,7 @@ class FeatureParserTest {
     @Test
     void feature_file_without_pickles_is_parsed_produces_empty_feature() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"))) {
             Optional<Feature> feature = parser.parse(uri, source, UUID::randomUUID);
             assertTrue(feature.isPresent());
             assertEquals(0, feature.get().getPickles().size());
@@ -54,7 +55,7 @@ class FeatureParserTest {
     @Test
     void empty_feature_file_is_parsed_but_produces_no_feature() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/empty.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/empty.feature"))) {
             Optional<Feature> feature = parser.parse(uri, source, UUID::randomUUID);
             assertFalse(feature.isPresent());
         }
@@ -63,7 +64,7 @@ class FeatureParserTest {
     @Test
     void unnamed_elements_return_empty_strings_as_name() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/unnamed.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/unnamed.feature"))) {
 
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             assertEquals(Optional.empty(), feature.getName());
@@ -91,11 +92,11 @@ class FeatureParserTest {
     @Test
     void empty_table_is_parsed() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/empty-table.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/empty-table.feature"))) {
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             Pickle pickle = feature.getPickles().get(0);
             Step step = pickle.getSteps().get(0);
-            DataTableArgument argument = (DataTableArgument) step.getArgument();
+            DataTableArgument argument = (DataTableArgument) requireNonNull(step.getArgument());
             assertEquals(5, argument.getLine());
         }
     }
@@ -103,15 +104,17 @@ class FeatureParserTest {
     @Test
     void empty_doc_string_media_type_is_null() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/doc-string.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/doc-string.feature"))) {
 
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             Pickle pickle = feature.getPickles().get(0);
             List<Step> steps = pickle.getSteps();
 
+            DocStringArgument argument0 = (DocStringArgument) requireNonNull(steps.get(0).getArgument());
+            DocStringArgument argument1 = (DocStringArgument) requireNonNull(steps.get(1).getArgument());
             assertAll(() -> {
-                assertNull(((DocStringArgument) steps.get(0).getArgument()).getContentType());
-                assertEquals("text/plain", ((DocStringArgument) steps.get(1).getArgument()).getContentType());
+                assertNull(argument0.getMediaType());
+                assertEquals("text/plain", argument1.getMediaType());
             });
         }
     }
@@ -119,7 +122,7 @@ class FeatureParserTest {
     @Test
     void backgrounds_can_occur_twice() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/background.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/background.feature"))) {
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             Pickle pickle = feature.getPickles().get(0);
             List<Step> steps = pickle.getSteps();
@@ -130,16 +133,16 @@ class FeatureParserTest {
     @Test
     void lexer_error_throws_exception() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/lexer-error.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/lexer-error.feature"))) {
             FeatureParserException exception = assertThrows(FeatureParserException.class,
                 () -> parser.parse(uri, source, UUID::randomUUID));
-            assertEquals("" +
-                    "Failed to parse resource at: classpath:com/example.feature\n" +
-                    "(1:1): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Feature  FA'\n" +
-                    "(3:3): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Scenario SA'\n" +
-                    "(4:5): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Given GA'\n" +
-                    "(5:5): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'When GA'\n" +
-                    "(6:5): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Then TA'",
+            assertEquals("""
+                    Failed to parse resource at: classpath:com/example.feature
+                    (1:1): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Feature  FA'
+                    (3:3): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Scenario SA'
+                    (4:5): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Given GA'
+                    (5:5): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'When GA'
+                    (6:5): expected: #EOF, #Language, #TagLine, #FeatureLine, #Comment, #Empty, got 'Then TA'""",
                 exception.getMessage());
         }
     }
